tweaked various issues with desktop view. Fixed some basic animations and elements that were stretching or not ending where they should.

--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -73,7 +73,4 @@
 
 /* >>>>>>>>>>>>>>>>>> Media Queries <<<<<<<<<<<<<<<<<< */
 @media only screen and (min-width: 768px) {
-  .Homepage .nav-chevron {
-    height: 60px;
-  }
 }
